crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__first_run_recovery_normal.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: frame.render_styled()
---
│   setup · opencode-go · add API key                                               # [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=setup · opencode-go · add API key [bg=#292e42]=                                            [bg=#292e42]=  
│   The credential stays hidden and is written only after an explicit scope         # [bg=#212337]=   [fg=#ebfafa bg=#212337]=The credential stays hidden and is written only after an explicit scope [bg=#212337]=      [bg=#212337]=  
│   choice.                                                                         # [bg=#212337]=   [fg=#ebfafa bg=#212337]=choice. [bg=#212337]=                                                                      [bg=#212337]=  
│     provider: opencode-go                                                         # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  provider: opencode-go [bg=#212337]=                                                      [bg=#212337]=  
│   ❯ enter API key                                                                 # [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=❯ enter API key [bg=#292e42]=                                                              [bg=#292e42]=  
│     switch model/provider                                                         # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  switch model/provider [bg=#212337]=                                                      [bg=#212337]=  
│     show setup instructions                                                       # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  show setup instructions [bg=#212337]=                                                    [bg=#212337]=  
│     return to draft                                                               # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  return to draft [bg=#212337]=                                                            [bg=#212337]=  
│     quit                                                                          # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  quit [bg=#212337]=                                                                       [bg=#212337]=  
│   ↑/↓ choose · Enter confirm · Esc close                                          # [bg=#212337]=   [fg=#3b4261 bg=#212337]=↑/↓ choose · Enter confirm · Esc close [bg=#212337]=                                       [bg=#212337]=
