crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__first_run_recovery_tiny.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: rendered
---
│   setup · opencode-go · c…  # [bg=#212337]=   [fg=#04d1f9 bg=#212337]=setup · opencode-go · c…
│   … 5 above · 1 below · ❯…  # [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=… 5 above · 1 below · ❯…
│    ↑↓  choose             # [-]=   [fg=#ebfafa bg=#292e42 b]= ↑↓  [-]=  [fg=#abb4da]=choose [-]=          [-]=
