crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__help_rows.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: frame.render_styled()
---
│   ╭ help · focus: keyboard ──────────────────────────────────────────────────────╮  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=╭ help · focus: keyboard ──────────────────────────────────────────────────────╮
│   │    ── Navigation ──                                                              │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=  ── Navigation ──                                                               [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+O          open the action palette                                       │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+O          open the action palette                                        [fg=#ebfafa bg=#212337 b]=│
│   │    Enter           accept highlighted item                                       │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Enter           accept highlighted item                                        [fg=#ebfafa bg=#212337 b]=│
│   │    Escape          close help, files, or commands                                │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Escape          close help, files, or commands                                 [fg=#ebfafa bg=#212337 b]=│
│   │    Up/Down         move cursor or recall history                                 │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Up/Down         move cursor or recall history                                  [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+P          open workspace file picker                                    │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+P          open workspace file picker                                     [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+T          transpose characters                                          │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+T          transpose characters                                           [fg=#ebfafa bg=#212337 b]=│
│   │    ── Editing ──                                                                 │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=  ── Editing ──                                                                  [fg=#ebfafa bg=#212337 b]=│
│   │    Shift+Enter     insert newline                                                │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Shift+Enter     insert newline                                                 [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+A/E        move to start/end of line                                     │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+A/E        move to start/end of line                                      [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+B/F        move cursor left/right                                        │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+B/F        move cursor left/right                                         [fg=#ebfafa bg=#212337 b]=│
│   │    Ctrl+W          delete previous word                                          │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Ctrl+W          delete previous word                                           [fg=#ebfafa bg=#212337 b]=│
│   │    … 12 rows below                                                               │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#3b4261 bg=#212337]=  … 12 rows below                                                                [fg=#ebfafa bg=#212337 b]=│
│   │    Esc close · keys remain active                                                │  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=│ [bg=#212337]=   [fg=#3b4261 bg=#212337]=  Esc close · keys remain active                                                 [fg=#ebfafa bg=#212337 b]=│
│   ╰──────────────────────────────────────────────────────────────────────────────╯  # [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=╰──────────────────────────────────────────────────────────────────────────────╯
