crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__model_picker.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: frame.render_styled()
---
│   │  MODELS                                                         option 2/2    # [bg=#212337]=   [fg=#3b4261 bg=#212337]=│   [fg=#f1fc79 bg=#212337 b]=MODELS [bg=#212337]=                                                          [fg=#6473b7 bg=#212337]=option 2/2 [bg=#212337]=
│   │  filter: type to filter                                                       # [bg=#212337]=   [fg=#3b4261 bg=#212337]=│   [fg=#3b4261 bg=#212337]=filter: type to filter [bg=#212337]=                                                    [bg=#212337]=
│   │    opencode/big-pickle  Recommended route to Kimi K2.7-…                      # [bg=#212337]=   [fg=#3b4261 bg=#212337]=│   [fg=#ebfafa bg=#212337]=  opencode/big-pickle  Recommended route to Kimi K2.7-… [bg=#212337]=                   [bg=#212337]=
│   │  ❯ opencode/gpt-5.6-luna  Largest context window                              # [bg=#292e42]=   [fg=#3b4261 bg=#292e42]=│   [fg=#ebfafa bg=#292e42 b]=❯ opencode/gpt-5.6-luna  Largest context window [bg=#292e42]=                           [bg=#292e42]=
│   │  Enter select · Esc close                                                     # [bg=#212337]=   [fg=#3b4261 bg=#212337]=│   [fg=#3b4261 bg=#212337]=Enter select · Esc close [bg=#212337]=                                                  [bg=#212337]=
