crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__permission_prompt.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: frame.render_styled()
---
│   permission · Write src/main.rs · approval required · focused                    # [bg=#212337]=   [fg=#f1fc79 bg=#212337]=permission · Write src/main.rs · approval required · focused [bg=#212337]=                 [bg=#212337]=  
│   scope: local user · active tool only · no TUI sandbox                           # [bg=#212337]=   [fg=#f1fc79 bg=#212337]=scope: local user · active tool only · no TUI sandbox [bg=#212337]=                        [bg=#212337]=  
│     Allow once  [allow once]                                                      # [bg=#212337]=   [fg=#ebfafa bg=#212337]=  Allow once  [allow once] [bg=#212337]=                                                   [bg=#212337]=  
│   ❯ Reject  [reject once]                                                         # [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=❯ Reject  [reject once] [bg=#292e42]=                                                      [bg=#292e42]=  
│   Enter choose · Esc cancel                                                       # [bg=#212337]=   [fg=#abb4da bg=#212337]=Enter choose · Esc cancel [bg=#212337]=                                                    [bg=#212337]=
