crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_cjk.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: combined
---
width=80:
│     ❯  日本語テキスト                                                             # [-]=   [bg=#171928]=   [fg=#04d1f9 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=日本語テキスト [bg=#171928]=                                                          [-]=
width=40:
│     ❯  日本語テキスト                     # [-]=   [bg=#171928]=   [fg=#04d1f9 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=日本語テキスト [bg=#171928]=                  [-]=
